# test-train-lora

./: .flake8  .gitignore  CONFIGURATION_GUIDE.md  Dockerfile  GRANITE_PII_SETUP.md  INSTALL.md  MEMORY_OPTIMIZATION.md  OPENSHIFT_DEPLOYMENT.md  PERFORMANCE.md  PERFORMANCE_OPTIMIZATIONS.md  README.md  SHELL_COMPLETION_GUIDE.md  SPEED_OPTIMIZATION_SUMMARY.md  accelerate_config.yaml  download_pii_dataset.py  get-data.sh  kill_training.sh  monitor_gpu.sh  monitor_gpu_simple.sh  openshift-setup.sh  openshift-training.yaml  openshift-training.yaml.bak  pyproject.toml  requirements.txt  test_completions.sh  train_multi_gpu.sh
lora_trainer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
lora_trainer_app/: __init__.py  api_client.py  cli.py  cli_argparse_backup.py  cli_typer.py  config.py  config_loader.py  dataset_generator.py  inference.py  lora_trainer.py  model_exporter.py  training_visualizer.py  utils.py
